# waterhouse

./: .ghcid  .gitignore  README.md  cabal.project  hie.yaml  stack.yaml  waterhouse.cabal
.github/workflows/: build.yml  format.yml  lint.yml
src/Graph/: AdjacencyArray.hs  AdjacencyList.hs  Common.hs  Directed.hs  UnDirected.hs
test/: Spec.hs
