cabal-version:      2.4
name:               waterhouse
version:            0.1.0
homepage:           https://github.com/waddlaw/waterhouse#readme
bug-reports:        https://github.com/waddlaw/waterhouse/issues
license:            MIT
tested-with:        GHC ==8.6.5 || ==8.8.3 || ==8.10.1
extra-source-files:
  README.md
  ChangeLog.md

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

source-repository head
  type:     git
  location: https://github.com/waddlaw/waterhouse

common common
  build-depends:      base >=4.12 && <4.15
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  if flag(pedantic)
    ghc-options: -Werror

  default-extensions: StrictData
  default-language:   Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , containers  ^>=0.6
    , massiv      ^>=0.5

  -- cabal-fmt: expand src
  exposed-modules:
    Graph.AdjacencyArray
    Graph.AdjacencyList
    Graph.Common
    Graph.Directed
    Graph.UnDirected

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , tasty             ^>=1.3
    , tasty-hunit       ^>=0.10
    , tasty-quickcheck  ^>=0.10
    , tasty-rerun       ^>=1.1

  -- cabal-fmt: expand test
  other-modules:  Spec
